npm-new/anisoc/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  margin: 0;
  padding: 0;
  font-family: Verdana, sans-serif;
  font-size: 1.2rem;
  scrollbar-gutter: stable;
}

.title {
  font-family: "Josefin Sans", sans-serif;
  font-size: 4.5rem;
}

a {
  text-decoration: none;
  color: #000;
}

.subtitle {
  font-family: "Josefin Sans", sans-serif;
  font-size: 2.5rem;
}

.copy {
  font-family: Verdana, sans-serif;
}

.menu {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  background-color: #f59e45;
}

.menu-item {
  font-family: "Josefin Sans", sans-serif;
  font-size: 2rem;
  padding: 0.5vw;
  cursor: pointer;
}

.menu-item:hover {
  color: #7a3e00;
}

.mobile-menu {
  background-color: #f59e45;
}

.mobile-menu-item {
  font-family: "Josefin Sans", sans-serif;
  font-size: 1rem;
  cursor: pointer;
}

.home {
  background-image: url(../public/static/title-background.png);
  font-family: "Josefin Sans", sans-serif;
  height: 95vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.home-title-bg {
  background: rgba(211, 211, 211, 0.445);
  background-blend-mode: normal;
  -webkit-backdrop-filter: blur(7px);
  backdrop-filter: blur(7px);
  box-shadow: 0px 2px 4px rgba(100, 100, 100, 0.5);
}

.home-title {
  justify-content: center;
  align-items: center;
}

.about {
  background-image: url(../public/static/about-background.png);
  padding: 4vw;
  padding-left: 7vw;
  padding-right: 7vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.join-us {
  justify-content: center;
  padding: 2vw;
  padding-left: 7vw;
  padding-right: 7vw;
  background-color: #8dd5ff;
}

.join-us .title {
  display: grid;
  place-items: center;
  margin-right: 5vw;
}

.link {
  justify-content: center;
  text-align: center;
  padding: 2vw;
  margin: 1vw;
  color: white;
}

.events {
  padding: 4vw;
  padding-left: 7vw;
  padding-right: 7vw;
}

.events .title {
  text-align: right;
  padding-bottom: 2vw;
}

.item-info {
  width: 100%;
  background-color: #f59e45;
  padding-left: 2vw;
  padding-right: 2vw;
}

.item-title {
  font-size: 2rem;
  font-weight: bold;
}

.flex-break {
  flex-basis: 100%;
  height: 0;
}

.polls {
  background-image: url(../public/static/polls-background.png);
  padding: 4vw;
  padding-left: 7vw;
  padding-right: 7vw;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  justify-content: center;
}

.polls-container {
  justify-content: center;
  padding: 2vw;
  padding-left: 7vw;
  padding-right: 7vw;
}

.poll {
  margin: 3vw;
  background-color: rgba(255, 255, 255, 0.75);
}

.poll .item-title {
  padding-left: 2vw;
  padding-right: 2vw;
}

.poll .item-description {
  padding-left: 2vw;
  padding-right: 2vw;
}

.poll .item-button {
  background-color: #f3f986;
  border: none;
  color: #000000;
  display: block;
  text-align: center;
  font-size: 2rem;

  margin-bottom: 5%;

  padding: 1vw 2vw;
  padding-bottom: 1.2vw;
}

.committee-members {
  background-image: url(../public/static/committee-background.png);
  padding: 4vw;
  padding-left: 7vw;
  padding-right: 7vw;
  flex-grow: 1;
}

.committee-members .title {
  text-align: center;
  padding-top: 2vw;
  background-color: rgba(255, 255, 255, 0.5);
}

.committee-container {
  background-color: rgba(255, 255, 255, 0.5);
  padding: 2vw;
  padding-top: 0;
  align-items: center;
}

.committee-member .committee-member-info {
  background-color: #5d5d5d;
  color: #ffffff;
  text-align: center;
}

.committee-member {
  margin: 3vw;
}

.committee-member img {
  display: block;
  width: 100%;
}

.committee-member-info p {
  margin: 0;
}

.committee-member-info .item-title {
  font-size: 2.5rem;
  font-weight: bold;
  padding-top: 1vw;
}

.committee-member-info .item-subtitle {
  font-size: 1.8rem;
  font-weight: normal;
}

.committee-member-info .item-description {
  font-size: 1rem;
  font-weight: normal;
  padding: 1vw;
  padding-bottom: 2vw;
}

.footer {
  background-color: #ffffff;
  text-align: center;
  padding-top: 1vw;
  padding-bottom: 1vw;
}

.footer p {
  margin: 0;
}

.footer a {
  text-decoration: underline;
  color: #f59e45;
}

